# dockerpy

./: Dockerfile  pencatatan_keuangan.py  pyproject.toml  shell.nix
