[project]
name = "python-hello-world"
version = "0.1.0"
description = "hello-world"
authors = [
    {name = "alfredo", email = "alorentiar03@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
